--- a/src/style/projects.css
+++ b/src/style/projects.css
@@ -1,3 +1,18 @@
-* {
+/* * {
 	background-color: transparent;
+} */
+.backgroundImg2 {
+	/* display: grid;
+	place-items: center;
+	height: 100vh;
+  width: 100vw; */
+
+	background-image: url("https://webdesignerdepot.s3.amazonaws.com/default-images/25.jpg");
+	height: 100vh; /* You must set a specified height */
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover; /* Resize the background image to cover the entire container */
 }
+/* . {
+	background-color: grey;
+} */
