restyling projects component

--- a/src/style/contactUs.css
+++ b/src/style/contactUs.css
@@ -2,7 +2,8 @@
 	display: grid;
 	place-items: center;
 
-	background-image: url("https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/156325783/original/e90a54f5c4385d428fb575b8b541542d79c9f606/develop-your-mern-stack-web-application.jpg");
+	background-image: url("https://wallpapercave.com/wp/wp2465958.jpg");
+	/* background-image: url("https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/156325783/original/e90a54f5c4385d428fb575b8b541542d79c9f606/develop-your-mern-stack-web-application.jpg"); */
 	justify-content: center;
 	display: flex;
 	align-items: center;
