--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -10,7 +10,7 @@
 	/* background-repeat: no-repeat;Do not repeat the image */
 	background-size: cover; /* Resize the background image to cover the entire container */
 }
-img {
+.profileImg {
 	margin-left: -50%;
 	border-width: 5px;
 	border-style: solid;
